// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom size (number) 1`] = `
.emotion-0 {
  height: 32px;
  width: 32px;
  border-radius: 4px;
  vertical-align: middle;
}

<img
  src="http://via.placeholder.com/100x100"
  alt="placeholder"
  class="emotion-0"
/>
`;

exports[`renders with custom size (string) 1`] = `
.emotion-0 {
  height: 4rem;
  width: 4rem;
  border-radius: 4px;
  vertical-align: middle;
}

<img
  src="http://via.placeholder.com/100x100"
  alt="placeholder"
  class="emotion-0"
/>
`;

exports[`renders without crashing 1`] = `
.emotion-0 {
  height: 24px;
  width: 24px;
  border-radius: 4px;
  vertical-align: middle;
}

<img
  src="http://via.placeholder.com/100x100"
  alt="placeholder"
  class="emotion-0"
/>
`;
